faet: Add Register And API Response

--- a/app/config/config.yaml
+++ b/app/config/config.yaml
@@ -5,3 +5,7 @@ Logger:
 database:
   mongodb: "mongodb://127.0.0.1:27017"
   db: "liteblog"
+Auth:
+  jwtexpiration: 24
+  jwtsecret: "123456"
+  passwordsalt: "123456"
